name:                glaze
version:             0.2.0.0
synopsis:            Framework for rendering things (or list of things, or things that contain things) with metadata/headers and values
description:         Please see README.md
homepage:            https://github.com/louispan/glaze#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2016 Louis Pan
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Glaze
  build-depends:       base >= 4.7 && < 5
                     , lens
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/glaze
